fix issue webpack not load

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
     <header>menu here</header>
-    <main>
-      <section>
-        <div class="banner">
-          <h2>Hello webpack!</h2>
-          <img src="./media/banner.jpg" alt="hello webpack" />
-        </div>
-      </section>
-    </main>
+    <img src="./media/banner.jpg" alt="" />
+    <img src="./media/banner.jpg" alt="" />
   </body>
 </html>
