--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,47 @@
     <title>Document</title>
   </head>
   <body>
-    <header>menu here</header>
-    <img src="./media/banner.jpg" alt="" />
-    <img src="./media/banner.jpg" alt="" />
+    <header>
+      <div class="menu-btn">
+        <span class="menu-btn__bugger"></span>
+      </div>
+      <nav class="nav">
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a href="index.html" class="menu-nav__link">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="index.html" class="menu-nav__link">Blogs</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="index.html" class="menu-nav__link">My Project</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="index.html" class="menu-nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="banner">
+        <h2 class="banner__title">My name is</h2>
+        <h2 class="banner__subtitle">Mike</h2>
+        <p class="banner__description">Web Developer, Programer, Designer!</p>
+      </section>
+      <section class="section-bottom">
+        <div class="social_icons">
+          <a href="#!">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="#!">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a href="#!">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+        </div>
+      </section>
+    </main>
+    <footer>&copy; Copyright: 2021</footer>
   </body>
 </html>
