Implement index page.

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,17 @@
       </nav>
     </header>
     <main>
-      <section class="banner">
-        <h2 class="banner__title">My name is</h2>
-        <h2 class="banner__subtitle">Mike</h2>
-        <p class="banner__description">Web Developer, Programer, Designer!</p>
+      <section class="hero">
+        <div class="banner">
+          <div class="banner-content">
+            <h2>My name is</h2>
+            <h1 class="bt-border-active">Mike</h1>
+            <p>Web Developer, Programer, Designer!</p>
+          </div>
+        </div>
       </section>
       <section class="section-bottom">
-        <div class="social_icons">
+        <div class="social-icons">
           <a href="#!">
             <i class="fab fa-linkedin fa-2x"></i>
           </a>
