Implement about page.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,13 +14,13 @@
       <nav class="nav">
         <ul class="menu-nav">
           <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">Home</a>
+            <a href="about.html" class="menu-nav__link">About Me</a>
           </li>
           <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">Blogs</a>
+            <a href="index.html" class="menu-nav__link">My Blogs</a>
           </li>
           <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">My Project</a>
+            <a href="index.html" class="menu-nav__link">My Projects</a>
           </li>
           <li class="menu-nav__item">
             <a href="index.html" class="menu-nav__link">Contact</a>
@@ -38,7 +38,9 @@
           </div>
         </div>
       </section>
-      <section class="section-bottom">
+    </main>
+    <footer class="pin-bt">
+      <section class="section-wraper">
         <div class="social-icons">
           <a href="#!">
             <i class="fab fa-linkedin fa-2x"></i>
@@ -50,8 +52,10 @@
             <i class="fab fa-facebook fa-2x"></i>
           </a>
         </div>
+        <div class="copy-right">
+          <span>&copy; Copyright: 2021</span>
+        </div>
       </section>
-    </main>
-    <footer>&copy; Copyright: 2021</footer>
+    </footer>
   </body>
 </html>
