implement project page

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <header>
@@ -14,13 +14,16 @@
       <nav class="nav">
         <ul class="menu-nav">
           <li class="menu-nav__item">
+            <a href="/" class="menu-nav__link">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="blog.html" class="menu-nav__link">Blogs</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="project.html" class="menu-nav__link">Projects</a>
+          </li>
+          <li class="menu-nav__item">
             <a href="about.html" class="menu-nav__link active">About Me</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">My Blogs</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">My Projects</a>
           </li>
           <li class="menu-nav__item">
             <a href="index.html" class="menu-nav__link">Contact</a>
@@ -32,7 +35,7 @@
       <section class="hero">
         <div class="banner-w-desc">
           <div class="banner-content">
-            <h1 class="bt-border-active">About</h1>
+            <h1 class="bt-border-active">About me</h1>
             <p>
               I have been makking websites since 2015, starting out with a .NET position in NashTech. A senior developer, I have been
               working in the content management space for 4 years.
