--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
@@ -14,13 +14,16 @@
       <nav class="nav">
         <ul class="menu-nav">
           <li class="menu-nav__item">
+            <a href="/" class="menu-nav__link active">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="blog.html" class="menu-nav__link">Blogs</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="project.html" class="menu-nav__link">Projects</a>
+          </li>
+          <li class="menu-nav__item">
             <a href="about.html" class="menu-nav__link">About Me</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">My Blogs</a>
-          </li>
-          <li class="menu-nav__item">
-            <a href="index.html" class="menu-nav__link">My Projects</a>
           </li>
           <li class="menu-nav__item">
             <a href="index.html" class="menu-nav__link">Contact</a>
