Update source code

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -37,8 +37,8 @@
           <div class="banner-content">
             <h1 class="bt-border-active">About me</h1>
             <p>
-              I have been makking websites since 2015, starting out with a .NET position in NashTech. A senior developer, I have been
-              working in the content management space for 4 years.
+              I have been makking websites since 2015, starting out with a .NET position in an outsourcing company. A senior developer, I
+              have been working in the content management space for 4 years.
             </p>
           </div>
         </div>
@@ -77,6 +77,31 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint quisquam quae, porro nulla molestiae repellendus id in deserunt
               illum sed modi, dignissimos a, deleniti blanditiis maiores cupiditate accusamus animi saepe.
             </p>
+          </div>
+          <div class="jobs__job">
+            <h2>2019</h2>
+            <h3>Splash Interactive</h3>
+            <h6>Senior .NET Developer</h6>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint quisquam quae, porro nulla molestiae repellendus id in deserunt
+              illum sed modi, dignissimos a, deleniti blanditiis maiores cupiditate accusamus animi saepe.
+            </p>
+          </div>
+          <div class="jobs__job">
+            <h2>2019 - Current</h2>
+            <h3>Spring Production</h3>
+            <h6>Senior .NET Developer</h6>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint quisquam quae, porro nulla molestiae repellendus id in deserunt
+              illum sed modi, dignissimos a, deleniti blanditiis maiores cupiditate accusamus animi saepe.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-wraper">
+        <div class="container">
+          <div class="headline">
+            <h2>Certificates</h2>
           </div>
         </div>
       </section>
