--- a/src/html/project.html
+++ b/src/html/project.html
@@ -42,10 +42,13 @@
         </div>
       </section>
       <section class="section-wraper">
-        <div class="projects">
+        <div class="container projects">
           <div class="project-item">
             <h2>Webpack starting kits for CMS project.</h2>
-            <span class="project-item__date">23 September 2021</span>
+            <span class="project-item__date">
+              <i class="far fa-calendar-alt"></i>
+              23 September 2021
+            </span>
             <div class="project-item__tags">
               <span class="badge">Front end</span>
             </div>
@@ -67,7 +70,10 @@
           </div>
           <div class="project-item">
             <h2>Umbraco starting project.</h2>
-            <span class="project-item__date">23 September 2021</span>
+            <span class="project-item__date">
+              <i class="far fa-calendar-alt"></i>
+              23 September 2021
+            </span>
             <div class="project-item__tags">
               <span class="badge">Back End</span>
               <span class="badge">Umbraco 8</span>
@@ -91,28 +97,30 @@
         </div>
       </section>
       <section class="section-wraper">
-        <div class="headline">
-          <h2>You may also like...</h2>
-        </div>
-        <div class="projects">
-          <div class="project-item">
-            <h2>Share: Webpack starting kits for CMS project.</h2>
-            <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
-            </div>
-            <div class="project-item__tags">
-              <span class="badge">Front end</span>
-            </div>
+        <div class="container">
+          <div class="headline">
+            <h2>You may also like...</h2>
           </div>
-          <div class="project-item">
-            <h2>Share: Umbraco starting project.</h2>
-
-            <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
+          <div class="projects">
+            <div class="project-item">
+              <h2>Share: Webpack starting kits for CMS project.</h2>
+              <div class="project-item__desc">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
+              </div>
+              <div class="project-item__tags">
+                <span class="badge">Front end</span>
+              </div>
             </div>
-            <div class="project-item__tags">
-              <span class="badge">Back End</span>
-              <span class="badge">Umbraco 8</span>
+            <div class="project-item">
+              <h2>Share: Umbraco starting project.</h2>
+
+              <div class="project-item__desc">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
+              </div>
+              <div class="project-item__tags">
+                <span class="badge">Back End</span>
+                <span class="badge">Umbraco 8</span>
+              </div>
             </div>
           </div>
         </div>
