--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>Blogs</title>
   </head>
   <body>
     <header>
@@ -17,13 +17,13 @@
             <a href="/" class="menu-nav__link">Home</a>
           </li>
           <li class="menu-nav__item">
-            <a href="blog.html" class="menu-nav__link">Blogs</a>
+            <a href="blog.html" class="menu-nav__link active">Blogs</a>
           </li>
           <li class="menu-nav__item">
             <a href="project.html" class="menu-nav__link">Projects</a>
           </li>
           <li class="menu-nav__item">
-            <a href="about.html" class="menu-nav__link active">About Me</a>
+            <a href="about.html" class="menu-nav__link">About Me</a>
           </li>
           <li class="menu-nav__item">
             <a href="index.html" class="menu-nav__link">Contact</a>
@@ -35,84 +35,51 @@
       <section class="hero">
         <div class="banner-w-desc">
           <div class="banner-content">
-            <h1 class="bt-border-active">My Projects</h1>
-            <p>My own projects, toolkits, examples,...</p>
-            <p>The projects are under MIT license and just for sharing.</p>
+            <h1 class="bt-border-active">I-logs</h1>
+            <p>The idea logs.</p>
           </div>
         </div>
       </section>
       <section class="section-wraper">
-        <div class="projects">
-          <div class="project-item">
-            <h2>Webpack starting kits for CMS project.</h2>
-            <span class="project-item__date">23 September 2021</span>
-            <div class="project-item__tags">
-              <span class="badge">Front end</span>
+        <div class="container articles">
+          <div class="article-item">
+            <div class="article-item__meta">
+              <span class="article-item__date">
+                <i class="far fa-calendar-alt"></i>
+                23 September 2021
+              </span>
+              <a href="!#">Javascript</a>
             </div>
-
-            <img src="https://picsum.photos/id/1067/450/450" alt="" />
-            <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
+            <h2>
+              <a href="!#"> Fun with async generators and for await </a>
+            </h2>
+            <div class="article-item__desc">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis alias odit cupiditate placeat, tempora dolores explicabo
+                sequi, quos aliquam, quae ipsa fuga. Sed, doloremque? Dolorem cumque rem dolor alias quidem.
+              </p>
             </div>
-            <div class="project-item__bt">
-              <a href="#!">
-                <i class="fas fa-eye"></i>
-                Preview
-              </a>
-              <a href="#!">
-                <i class="fab fa-github"></i>
-                Github
-              </a>
-            </div>
-          </div>
-          <div class="project-item">
-            <h2>Umbraco starting project.</h2>
-            <span class="project-item__date">23 September 2021</span>
-            <div class="project-item__tags">
-              <span class="badge">Back End</span>
-              <span class="badge">Umbraco 8</span>
-            </div>
-
-            <img src="https://picsum.photos/id/1084/450/450" alt="" />
-            <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
-            </div>
-            <div class="project-item__bt">
-              <a href="#!">
-                <i class="fas fa-eye"></i>
-                Preview
-              </a>
-              <a href="#!">
-                <i class="fab fa-github"></i>
-                Github
-              </a>
+            <div class="article-item__bt">
+              <a href="#" class="readmore">Read more</a>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="section-wraper">
-        <div class="headline">
-          <h2>You may also like...</h2>
-        </div>
-        <div class="projects">
-          <div class="project-item">
-            <h2>Share: Webpack starting kits for CMS project.</h2>
-            <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
+          <div class="article-item">
+            <div class="project-item__meta">
+              <span class="project-item__date">
+                <i class="far fa-calendar-alt"></i>
+                23 September 2021
+              </span>
+              <a href="!#">Javascript</a>
             </div>
-            <div class="project-item__tags">
-              <span class="badge">Front end</span>
-            </div>
-          </div>
-          <div class="project-item">
-            <h2>Share: Umbraco starting project.</h2>
+            <h2>
+              <a href="!#"> Fun with async generators and for await </a>
+            </h2>
 
             <div class="project-item__desc">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate. Enim dicta minus voluptatem fuga.</p>
-            </div>
-            <div class="project-item__tags">
-              <span class="badge">Back End</span>
-              <span class="badge">Umbraco 8</span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis alias odit cupiditate placeat, tempora dolores explicabo
+                sequi, quos aliquam, quae ipsa fuga. Sed, doloremque? Dolorem cumque rem dolor alias quidem.
+              </p>
             </div>
           </div>
         </div>
